# learn_pytest

./: .coverage  .python-version  README.md  pyproject.toml  requirements_test.txt  setup.cfg  tox.ini
.github/workflows/: ci.yaml
src/simple_maths/: simple_maths.py
src/simple_maths.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_simple_maths.py
