[metadata]
name = simple_maths
description = dummy maths tool for learning testing with CI CD
platforms = linux, osx, win32

classifiers = 
    Programming Language :: Python :: 3

[options]
packages = simple_maths
install_requires = numpy
python_requires = >= 3.9
package_dir = =src

[options.extras_require]
testing = 
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
simple_maths = py.typed

[flake8]
max-line-length = 160